--- a/mwlib-docker/Dockerfile
+++ b/mwlib-docker/Dockerfile
@@ -1,19 +1,11 @@
 FROM debian:jessie
 MAINTAINER Egor Puzanov <epuzanov@gmx.de>
 
-# Set correct environment variables
-ENV DEBIAN_FRONTEND noninteractive
-ENV HOME            /root
-ENV LC_ALL          C.UTF-8
-ENV LANG            en_US.UTF-8
-ENV LANGUAGE        en_US.UTF-8
-
 RUN apt-get update
 
 RUN apt-get install -y python-pip python-lxml python-imaging python-bottle\
     python-dev python-pypdf python-apipkg python-py python-simplejson\
     python-roman python-gevent python-greenlet pdftk ploticus blahtexml\
-    texlive-latex-recommended imagemagick \
     && mkdir /etc/pip \
     && echo "[global]\ntrusted-host=pypi.pediapress.com\n" > /etc/pip/pip.conf \
     && pip install -i http://pypi.pediapress.com/simple/ mwlib \
@@ -23,6 +15,7 @@ RUN apt-get install -y python-pip python-lxml python-imaging python-bottle\
     && rmdir /etc/pip \
     && apt-get remove -y python-dev python-pip python3 gcc g++ make \
     && apt-get autoremove -y \
+    && apt-get install -y python-setuptools \
     && apt-get clean
 
 # Create cache temporary directories
