docker-compose.yml added

--- a/mediawiki-docker/Dockerfile
+++ b/mediawiki-docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM debian:jessie
 MAINTAINER Egor Puzanov <epuzanov@gmx.de>
 
-ARG MEDIAWIKI_VERSION wmf/1.29.0-wmf.1
+ARG MEDIAWIKI_VERSION=wmf/1.29.0-wmf.1
 ENV MEDIAWIKI_VERSION $MEDIAWIKI_VERSION
 
-ARG MEDIAWIKI_EXTENSIONS "VisualEditor CategoryTree ImageMap Collections"
+ARG MEDIAWIKI_EXTENSIONS="CategoryTree ImageMap Collection"
 ENV MEDIAWIKI_EXTENSIONS $MEDIAWIKI_EXTENSIONS
 
 RUN set -x; \
