--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ wiki:
         - wikidata:/data:rw
     environment:
         - MEDIAWIKI_VERSION=wmf/1.29.0-wmf.1
-        - MEDIAWIKI_EXTENSIONS="CategoryTree ImageMap Collection"
-        - MEDIAWIKI_SITE_SERVER=192.168.1.1
+        - MEDIAWIKI_EXTENSIONS=CategoryTree ImageMap Collection
+        - MEDIAWIKI_SITE_SERVER=http://192.168.1.1
         - MEDIAWIKI_SITE_NAME=MediaWiki
         - MEDIAWIKI_SITE_LANG=en
         - MEDIAWIKI_ADMIN_USER=admin
