--- a/docker-compose_v2.yml
+++ b/docker-compose_v2.yml
@@ -29,7 +29,7 @@ services:
             - wikidata:/data:rw
         environment:
             - MEDIAWIKI_VERSION=wmf/1.29.0-wmf.1
-            - MEDIAWIKI_EXTENSIONS="CategoryTree ImageMap Collection"
+            - MEDIAWIKI_EXTENSIONS=CategoryTree ImageMap Collection
             - MEDIAWIKI_SITE_SERVER=http://192.168.1.1
             - MEDIAWIKI_SITE_NAME=MediaWiki
             - MEDIAWIKI_SITE_LANG=en
